--- a/public/css/home.css
+++ b/public/css/home.css
@@ -55,3 +55,39 @@ section a{
   width: auto;
   height: 250px;
 }
+
+.box{
+  position: relative;
+}
+
+.input {
+  padding: 10px;
+  width: 50px;
+  height: 50px;
+  background: none;
+  border: 4px solid black;
+  border-radius: 50px;
+  box-sizing: border-box;
+  font-size: 26px;
+  color: black;
+  outline: none;
+  transition: .5s;
+}
+.box:hover input{
+  width: 250px;
+  background: white;
+  border-radius: 10px;
+}
+.box i{
+  position: absolute;
+  top: 50%;
+  right: 15px;
+  transform: translate(-50%,-50%);
+  font-size: 26px;
+  color: black;
+  transition: .2s;
+}
+.box:hover i{
+  opacity: 0;
+  z-index: -1;
+}
