--- a/public/css/home.css
+++ b/public/css/home.css
@@ -65,7 +65,7 @@ section a{
   width: 50px;
   height: 50px;
   background: none;
-  border: 4px solid black;
+  border: 4px solid #f7f7f2;
   border-radius: 50px;
   box-sizing: border-box;
   font-size: 26px;
@@ -76,12 +76,13 @@ section a{
 .box:hover input{
   width: 250px;
   background: white;
+  border: 4px solid black;
   border-radius: 10px;
 }
 .box i{
   position: absolute;
-  top: 50%;
-  right: 15px;
+  top: 40%;
+  right: 0.001%;
   transform: translate(-50%,-50%);
   font-size: 26px;
   color: black;
